--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -17,15 +17,15 @@
 }
 
 body {font-family: gotham;}
-.over-h {overflow: hidden;height: 100vh;}
 a:link,a:visited,a:hover,a:active {text-decoration: none;}
 
 /* 浏览器缩放提示 */
 .zoom-message {position: fixed;right: 0;top: 4.4rem;width: 16.5rem;padding: .8rem 2rem .8rem .8rem;
-  background: #ebf5fd;z-index: 9999;color: #515a6e;font-size: .7rem;display: none;
+  background: #ebf5fd;z-index: 999;color: #515a6e;font-size: .7rem;display: none;
   border-top-left-radius: .2rem;border-bottom-left-radius: .2rem;}
-.toastCnt {position: fixed;top: 1rem;height: 2rem;background: rgba(255,255,255);z-index: 999;width: 50%;margin: 0 auto;
-  left: 25%;border-radius: .25rem;text-align: center;line-height: 2rem;font-size: .8rem;color: #FB6363;display: none;}
+.toastCnt {position: fixed;top: 1rem;background: rgba(255,255,255,1);z-index: 999;width: 50%;
+  margin: 0 auto;padding: .5rem 1rem;left: 25%;border-radius: .25rem;text-align: center;
+  line-height: 1.5;font-size: .8rem;color: #FB6363;display: none;}
 
 .public-head ul li:hover,.content-head .head-down img:hover,.suggest-from span:hover,
 .public-title figure:hover,.last-foot-list .biutWx:hover,.mask-close:hover {cursor: pointer;} 
@@ -33,10 +33,10 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .check-color {color:rgba(255,255,255,.8)!important;}
 /*  2462 2145 497 */
 
-.head-content {position: relative;background: url('../images/index/header-bg.png') no-repeat center;
-  background-size: cover;padding-bottom: 24.5rem;}
+.head-content {position: relative;background: url('../images/index/header-bg.png') no-repeat top, #3d3f4a;
+  padding-bottom: 24.5rem;}
 .head-container-ab {position: absolute;top: 0;left: 0;right: 0;bottom: 0;}
-.head-container-bg {background: url('../images/index/header-bg-active.png') no-repeat center;background-size: cover;
+.head-container-bg {background: url('../images/index/header-bg-active.png') no-repeat top;
   animation-name: breath; animation-duration: 3s;animation-timing-function: ease-in-out;animation-iteration-count: infinite;
   -webkit-animation-name: breath;-webkit-animation-duration: 3s;-webkit-animation-timing-function: ease-in-out; 
   -webkit-animation-iteration-count: infinite;pointer-events: none;}
@@ -49,6 +49,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 
 .echart-content {width: 19.1rem;height: 7.45rem;background: url('../images/index/echartBg.png') no-repeat center;
   background-size: cover;color: #fff;}
+.echart-content div {font-size: .6rem!important;font-family: PingFangSC-Light, sans-serif;}
 
 .container-footer {background:rgba(44,45,55,1);position: relative;}
 
@@ -72,6 +73,8 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .content-head {padding: 13.6rem 0 0 2.8rem;}
 .content-head .head-logo h1 {margin-bottom: 2rem;color: #00D69B;}
 .content-head .head-logo p {font-size: .75rem;color: rgba(255,255,255,.8);line-height: 2;}
+.content-head .head-logo figcaption .pc-tit {display: none;}
+.content-head .head-logo figcaption .moible-tit {display: block;}
 .content-head .head-logo figcaption img {width: 11px;height: 9px;margin-bottom: 1rem;}
 .content-head .head-logo figcaption img:last-child {margin: 1rem 0 0;}
 
@@ -99,14 +102,10 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .project-list li {border-right: .15rem solid rgba(255,255,255,.1);padding-top: 4.7rem;height: 21.4rem;
   box-sizing: border-box;background:rgba(44,45,55,.3);}
 
-
 .project-list li:last-child {border-right: 0;}
 .project-list section figure img {margin-bottom: 1.65rem;width: 4.9rem;height: 4.9rem;
   transition: All 0.4s ease-in-out;-webkit-transition: All 0.4s ease-in-out;
   -moz-transition: All 0.4s ease-in-out;-o-transition: All 0.4s ease-in-out;}
-.project-list section figure img:hover {transform: rotate(360deg);-webkit-transform: rotate(360deg);
-  -moz-transform: rotate(360deg);-o-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);cursor:pointer;}
 .project-list section figure figcaption {font-size: .65rem;color: #76747B;line-height: 2;}
 .project-list section figure figcaption .font-bold {font-size: .85rem;color: #fff;line-height: 1.5;}
 .project-list section figure figcaption .font-top {margin-top: .6rem;}
@@ -158,7 +157,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 
 .mask {display: none;}
 .news-mask {position: fixed;top: 0;bottom: 0;left: 0;right: 0;display: flex;align-items: center;
-  justify-content: center;background: rgba(0, 0, 0,.85);overflow: hidden;z-index: 999;}
+  justify-content: center;background: rgba(0, 0, 0,.85);overflow: hidden;z-index: 99;}
 
 .news-mask-list {display: flex;}
 .news-mask-list section:first-child {margin-right: 1rem;}
@@ -173,7 +172,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .news-mask-cnt img {max-width: 100%;}
 
 /* 首页 - Submit a subscription */
-.suggest {text-align: center;font-size: .55rem;color:rgba(255,255,255,.4);}
+.suggest {text-align: center;font-size: .6rem;color:rgba(255,255,255,.4);}
 .suggest .mobile-suggest {display: none;}
 .suggest .suggest-tit {font-size: .8rem;color: #fff;padding: 8.5rem 0 1.5rem;}
 .suggest .suggest-txt {padding: .8rem 0 2.75rem;}
@@ -207,7 +206,8 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .about-list {border-top: .15rem solid #83898F;padding: 4.5rem 0 4.4rem;display: flex;
   justify-content: space-between;margin-top: -9rem;position: relative;}
 .about-list h4 {font-size: .55rem;color: #fff;padding-bottom: 1.75rem;}
-.about-list ul li {color:rgba(255,255,255,.4);font-size: .5rem;line-height: 2.5;}
+.about-list ul li a {color:rgba(255,255,255,.4);font-size: .5rem;line-height: 2.5;}
+.about-list ul li a:hover {color:rgba(255,255,255, 1);font-size: .5rem;line-height: 2.5;}
 
 .about-list .foot-list {display: flex;}
 .about-list .last-section-cnt {text-align: right;}
@@ -227,12 +227,16 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 /* 媒体查询 适配 */
 html {font-size: 20px;}
 @media (max-width: 767px) {
+  .toastCnt {width: 80%;left: 10%;}
   html { font-size: 17px;}
   .head-content {padding-bottom: 5rem;}
-  .public-head {padding: 1.25rem 15px 0;}
+  .public-head {padding: .85rem 15px;position: fixed;top: 0;left: 0;right: 0;z-index: 99;
+    background: rgba(40, 38, 53,0);transition: all 1s;}
+  .public-head-bg {background: rgba(40, 38, 53,1);transition: all 1s;}
+  
   .public-head figure {display: flex;justify-content: space-between;align-items: center;width: 100%;}
   
-  .public-head .open-nav {width: auto;position: fixed;top: 1.25rem;left: 15px;right: 15px;z-index: 999;
+  .public-head .open-nav {width: auto;position: fixed;top: .85rem;left: 15px;right: 15px;z-index: 99;
     width: auto;}
 
   .public-head figure  figcaption {width: 25px;transition: all .5s ease;}
@@ -243,13 +247,12 @@ html {font-size: 20px;}
   .public-head figure  .open span:first-child {transform: rotate(45deg);position: absolute;top: .25rem;}
   .public-head figure  .open span:last-child {transform: rotate(-45deg);top: .8rem;}
   .public-head figure  .open span:nth-child(2) {display: none;}
-
-
+  
   .public-head ul {flex-direction: column;}
   .public-head ul li,.public-head ul li:last-child {margin: 2rem 0 0;font-size: 1.2rem;}
   .public-head ul li:first-child {margin-top: 0;}
   .public-head nav {flex: 1;display: flex;align-content: center;justify-content: center;
-    width: 100%;position: fixed;top: 0;left: 0;right: 0;bottom: 0;z-index: 9;display: none;
+    width: 100%;position: fixed;top: 0;left: 0;right: 0;bottom: 0;z-index: 9;display: none;height: 100vh;
     background: url('../images/index/header-mask-bg.png') center no-repeat;background-size: 100% 100%;} 
   
   .public-head  .tab-nav {display: flex!important;}
@@ -257,14 +260,17 @@ html {font-size: 20px;}
 
   .row {margin: 0;}
   
-  .content-head {padding: 7.13rem 0 0;text-align: center;}
+  .content-head {padding: 10.13rem 0 0;text-align: center;}
   .content-head .head-logo h1 {margin-bottom: 1.75rem;}
   .content-head .head-logo figcaption img {margin-bottom: 1.25rem;}
   .content-head .head-logo figcaption img:last-child {margin: 1.25rem 0 0;}
+  .content-head .head-logo figcaption .pc-tit {display: none;}
+  .content-head .head-logo figcaption .moible-tit {display: block;}
   .content-head .head-list {display: none;}
 
-  .content-head .head-down {margin: 16.95rem 0 5.6rem;}
+  .content-head .head-down {margin: 12.95rem 0 5.6rem;}
    
+  .about-project {padding-top: 4.5rem;}
   
   .public-title {padding: 0 0 1.25rem 0;border-color: #6ADEB5;}
   .project-list li {padding-top: 3.7rem;}
