修改官网数据

--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -16,7 +16,8 @@
   src: url(../dist/font/ProximaNova-Bold.otf);
 }
 
-body {font-family: gotham;}
+body {font-family: gotham;overflow:auto;-webkit-overflow-scrolling:touch;} 
+
 a:link,a:visited,a:hover,a:active {text-decoration: none;}
 
 /* 浏览器缩放提示 */
@@ -58,16 +59,40 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
     padding: 2.9rem 3.75rem 0 3.15rem;}
 .public-head figure img {width: 5.2rem;height: 1.75rem;}
 .public-head ul {display: flex;align-items: center;}
-.public-head ul li {margin-left: 5.2rem;font-size: .9rem;color:rgba(255,255,255,.2);}
+.public-head ul li {margin-left: 3.5rem;font-size: .8rem;color:rgba(255,255,255,.2);}
+.public-head ul .login a {border: .1rem solid rgba(255,255,255,1);border-radius: .75rem;color: #fff;
+  padding: .45rem 1.1rem;}
 .public-head ul .check-img {display: flex;align-items: center;}
 .public-head ul li img {width: .55rem;height: .55rem;margin-right: .9rem;vertical-align: middle;}
 .public-head ul li a {color:rgba(255,255,255,.2);}
 .public-head ul li a:hover {color:rgba(255,255,255,.8);text-decoration: none;}
 .public-head ul li:first-child {margin-left: 0;}
-.public-head ul li:last-child {margin-left: 6.4rem;}
+.public-head ul li:last-child {margin-left: 4.5rem;}
 .public-head ul li:last-child span:first-child {font-family: PingFangSC-Semibold, sans-serif;}
 .public-head ul li:last-child .head-line {padding: 0 .4rem;}
 
+/* 首页 - footer  background:rgba(44,45,55,1);*/
+.footer {width: 100%;background:rgba(44,45,55,1);}
+.about-list {border-top: .15rem solid #83898F;padding: 4.5rem 0 4.4rem;display: flex;
+  justify-content: space-between;margin-top: -9rem;position: relative;}
+.about-list h4 {font-size: .55rem;color: #fff;padding-bottom: 1.75rem;}
+.about-list ul li a {color:rgba(255,255,255,.4);font-size: .5rem;line-height: 2.5;}
+.about-list ul li a:hover {color:rgba(255,255,255, 1);font-size: .5rem;line-height: 2.5;}
+
+.about-list .foot-list {display: flex;}
+.about-list .last-section-cnt {text-align: right;}
+.last-foot-list {justify-content: flex-end;}
+.last-foot-list ul {margin-right: 1rem;}
+.last-foot-list ul li {margin-top: .5rem;}
+.last-foot-list ul li:first-child {margin-top: 0;}
+.last-foot-list ul:last-child {margin-right: 0;}
+.list-margin-left {margin-left: 1.9rem;}
+
+.last-foot-list .biutWx .wxActive {position: absolute;top: 10%;right: 15%;display: none;}
+
+.footer footer {height: 9.15rem;box-sizing: border-box;border-top: .1rem solid rgba(78,79,91,.7);
+  color:rgba(255,255,255,.3);font-size: .5rem;}
+.footer footer p {padding-top: 1rem;}
 
 /* 首页 - 头部内容 */
 .content-head {padding: 13.6rem 0 0 2.8rem;}
@@ -157,14 +182,14 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 
 .mask {display: none;}
 .news-mask {position: fixed;top: 0;bottom: 0;left: 0;right: 0;display: flex;align-items: center;
-  justify-content: center;background: rgba(0, 0, 0,.85);overflow: hidden;z-index: 99;}
+  justify-content: center;background: rgba(0, 0, 0,.85);z-index: 9999;}
 
 .news-mask-list {display: flex;}
 .news-mask-list section:first-child {margin-right: 1rem;}
 .mask-close {position: absolute;top: .25rem;right: .5rem;font-size: 20px;}
 
 .news-mask-content {width: 45rem;background: #fff;padding: 2.5rem 2rem;height: 80vh;overflow-y: auto;
-  position: relative;border-radius: .25rem;}
+  position: relative;border-radius: .25rem;overflow-y:auto;-webkit-overflow-scrolling:touch;}
 .news-mask-title {display: flex;justify-content: space-between;padding-bottom: 2rem;
   border-bottom:5px solid #59DCB4;box-sizing: border-box;font-size: .8rem;}
 .news-mask-title h5 {font-size: 1.2rem;font-weight: bold;width: 20rem;word-break: break-all;}
@@ -200,36 +225,21 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .network-state ul li:nth-child(4) span:first-child {color: #3BAED8;width: 9.55rem;}
 .network-state ul li:nth-child(5) span:first-child {color: #7C7AD5;width: 9.9rem;}
 
-/* 首页 - footer  background:rgba(44,45,55,1);*/
-.footer {width: 100%;background:rgba(44,45,55,1);}
+/* */
+.about-footer-list {margin: 0;}
 
-.about-list {border-top: .15rem solid #83898F;padding: 4.5rem 0 4.4rem;display: flex;
-  justify-content: space-between;margin-top: -9rem;position: relative;}
-.about-list h4 {font-size: .55rem;color: #fff;padding-bottom: 1.75rem;}
-.about-list ul li a {color:rgba(255,255,255,.4);font-size: .5rem;line-height: 2.5;}
-.about-list ul li a:hover {color:rgba(255,255,255, 1);font-size: .5rem;line-height: 2.5;}
 
-.about-list .foot-list {display: flex;}
-.about-list .last-section-cnt {text-align: right;}
-.last-foot-list {justify-content: flex-end;}
-.last-foot-list ul {margin-right: 1rem;}
-.last-foot-list ul li {margin-top: .5rem;}
-.last-foot-list ul li:first-child {margin-top: 0;}
-.last-foot-list ul:last-child {margin-right: 0;}
-.list-margin-left {margin-left: 1.9rem;}
-
-.last-foot-list .biutWx .wxActive {position: absolute;top: 10%;right: 15%;display: none;}
-
-.footer footer {height: 9.15rem;box-sizing: border-box;border-top: .1rem solid rgba(78,79,91,.7);
-  color:rgba(255,255,255,.3);font-size: .5rem;}
-.footer footer p {padding-top: 1rem;}
 
 /* 媒体查询 适配 */
 html {font-size: 20px;}
 @media (max-width: 767px) {
   .toastCnt {width: 80%;left: 10%;}
   html { font-size: 17px;}
-  .head-content {padding-bottom: 5rem;}
+  .head-content {padding-bottom: 5rem;
+    background: url('../images/index/testbg.png') no-repeat top, #3d3f4a;background-size: contain;}
+
+  .head-container-bg  {background: none;}
+
   .public-head {padding: .85rem 15px;position: fixed;top: 0;left: 0;right: 0;z-index: 99;
     background: rgba(40, 38, 53,0);transition: all 1s;}
   .public-head-bg {background: rgba(40, 38, 53,1);transition: all 1s;}
@@ -260,7 +270,7 @@ html {font-size: 20px;}
 
   .row {margin: 0;}
   
-  .content-head {padding: 10.13rem 0 0;text-align: center;}
+  .content-head {padding: 7.13rem 0 0;text-align: center;}
   .content-head .head-logo h1 {margin-bottom: 1.75rem;}
   .content-head .head-logo figcaption img {margin-bottom: 1.25rem;}
   .content-head .head-logo figcaption img:last-child {margin: 1.25rem 0 0;}
@@ -268,7 +278,7 @@ html {font-size: 20px;}
   .content-head .head-logo figcaption .moible-tit {display: block;}
   .content-head .head-list {display: none;}
 
-  .content-head .head-down {margin: 12.95rem 0 5.6rem;}
+  .content-head .head-down {margin: 16.45rem 0 5.6rem;}
    
   .about-project {padding-top: 4.5rem;}
   
@@ -277,21 +287,20 @@ html {font-size: 20px;}
   .project-list li:nth-child(1),.project-list li:nth-child(2) {border-bottom: .15rem solid rgba(255,255,255,.1);border-right: .15rem solid rgba(255,255,255,.1);}
   .project-list li:nth-child(2) {border-right: 0;}
   .project-list section figure figcaption p:first-child {margin-bottom: .9rem;}
-  
-  .price-list .price-img figcaption {right: 5.1rem;}
 
   .new-dynamics {margin-top: 5.075rem;}
   .new-dynamics ul li:first-child {padding-top: 3.175rem;}
   .new-dynamics ul li {padding-top: 1.75rem;}
-  .new-dynamics ul li figure,.new-dynamics ul li figure img {width: 100%;}
+  .new-dynamics ul li figure {margin: 0 auto;}
    
   .news-mask-content {width: 85%;}
-  .news-mask-title h5 {width: 50%;word-break: break-all;}
+  .news-mask-title {flex-direction: column;padding-bottom: 1rem;}
+  .news-mask-title h5 {width: 100%;word-break: break-all;padding-bottom: .5rem;}
 
   .price-title {padding-top: 4.9rem;padding-right: 0;align-items: flex-start;}
   .price-title section {flex-direction: column;text-align: right;}
   .price-title section p {margin: .6rem 0;}
-  .price-list li section,.price-list .price-img img {width: 100%;}
+  .price-list li section {margin: 0 auto;}
 
   .suggest-from {flex-direction: column;padding-bottom: 5.875rem;width: 80%;}
   .suggest .pc-suggest,.suggest .suggest-txt {display: none;}
