--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -80,7 +80,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .about-list ul li a:hover {color:rgba(255,255,255, 1);font-size: .5rem;line-height: 2.5;}
 
 .about-list .foot-list {display: flex; align-items: center;}
-.about-list .last-section-cnt {text-align: right;}
+.about-list .last-section-cnt {text-align: left;}
 .last-foot-list {justify-content: flex-end;}
 .last-foot-list ul {margin-right: 1rem;}
 .last-foot-list ul li {margin-top: .5rem;}
@@ -93,7 +93,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .foot-list-img ul li {margin-left: 1rem;}
 .foot-list-img ul:last-child {margin-bottom: 0;}
 .foot-list-img ul li:first-child {margin-left: 0;}
-.last-foot-list .biutWx .wxActive {position: absolute;top: 10%;right: 15%;display: none;}
+.wxActive {position: absolute;top: 10%;right: 15%;display: none;}
 
 .footer footer {height: 9.15rem;box-sizing: border-box;border-top: .1rem solid rgba(78,79,91,.7);
   color:rgba(255,255,255,.3);font-size: .5rem;}
