change qr code css style

--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -88,7 +88,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .last-foot-list ul:last-child {margin-right: 0;}
 .list-margin-left {margin-left: 1.9rem;}
 
-.foot-list-img {display: flex;flex-direction: column;}
+.foot-list-img {display: flex;flex-direction: column;align-items: center;}
 .foot-list-img ul {display: flex;align-items: center;margin-bottom: .5rem;justify-content: flex-end;}
 .foot-list-img ul li {margin-left: 1rem;}
 .foot-list-img ul:last-child {margin-bottom: 0;}
