--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -331,7 +331,7 @@ html {font-size: 20px;}
   .about-list .last-section-cnt {text-align: center;padding-top: 2.5rem;}
   .last-section-cnt .foot-list {flex-direction: row;}
   .last-section-cnt .last-foot-list {justify-content: center;}
-  
+	.wxActive {top: 50%;right: 14%;}	
   .footer footer {height: 6rem;}
 }
 
