--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -118,7 +118,8 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .content-head .head-list li:last-child {padding: 0 1rem 0 .9rem;}
 .content-head .head-down {margin: 6.1rem 0 5.75rem;}
 .content-head .head-down img {width: 2.85rem;height: 2.85rem;}
-
+.content-head .head-down .head-down-img {width: 2.85rem;height: 2.85rem;position: relative;}
+.content-head .head-down .head-down-img  img:first-child {position: absolute;top: 0;right: 0;bottom: 0;left: 0;}
 /* 首页公共子导航 */
 .public-title {display: flex;align-items: center;justify-content: space-between;box-sizing: border-box;
   padding: 0 1.8rem 1.6rem 2.8rem;border-bottom: .2rem solid #787380;}
@@ -284,7 +285,8 @@ html {font-size: 20px;}
   .content-head .head-list {display: none;}
 
   /* .content-head .head-down {margin: 16.45rem 0 5.6rem;} */
-  .content-head .head-down {margin: 0;position: fixed;bottom: 3%;z-index: 999;left: 45%;}
+  .content-head .head-down {margin: 0;position: fixed;bottom: 3%;z-index: 999;left: 0;right: 0;
+    display: flex;width: 100%;align-items: center;justify-content: center;}
    
   .about-project {padding-top: 4.5rem;}
   
@@ -294,7 +296,7 @@ html {font-size: 20px;}
   .project-list li:nth-child(2) {border-right: 0;}
   .project-list section figure figcaption p:first-child {margin-bottom: .9rem;}
 
-  .new-dynamics {margin-top: 5.075rem;}
+  .new-dynamics {margin-top: 5.075rem;height: 89.85rem;}
   .new-dynamics ul li:first-child {padding-top: 3.175rem;}
   .new-dynamics ul li {padding-top: 1.75rem;}
   .new-dynamics ul li figure {margin: 0 auto;}
@@ -308,7 +310,7 @@ html {font-size: 20px;}
   .price-title section p {margin: .6rem 0;}
   .price-list li section {margin: 0 auto;}
 
-  .suggest-from {flex-direction: column;padding-bottom: 5.875rem;width: 80%;}
+  .suggest-from {flex-direction: column;padding-bottom: 3.875rem;width: 80%;}
   .suggest .pc-suggest,.suggest .suggest-txt {display: none;}
   .suggest .suggest-tit {line-height: 2;}
   .suggest .mobile-suggest {display: flex;align-items: flex-start;}
@@ -318,7 +320,7 @@ html {font-size: 20px;}
   .suggest-from input,.suggest-from span  {width: 100%;height: 2.1rem;flex: auto;line-height: 2.1rem;}
   .suggest-from span {margin-top: 1rem;border-radius: .25rem;}
   
-  .network-state {height: auto;padding-bottom: 4.75rem;}
+  .network-state {height: auto;padding-bottom: 4.75rem;padding-top: 4.4rem;}
   .network-state ul {flex-direction: column;}
   .network-state ul li:first-child {margin-top: 3.15rem;padding-top: 0;}
   .network-state ul li {margin-top: 1.25rem;}
@@ -332,8 +334,8 @@ html {font-size: 20px;}
   .about-list .last-section-cnt {text-align: center;padding-top: 2.5rem;}
   .last-section-cnt .foot-list {flex-direction: row;}
   .last-section-cnt .last-foot-list {justify-content: center;}
-	.wxActive {top: 50%;right: 14%;}	
   .footer footer {height: 6rem;}
+  .wxActive {top: 15%;right: 14%;}
 }
 
 @media (min-width: 768px) {
@@ -353,7 +355,3 @@ html {font-size: 20px;}
 @media (min-width: 1500px) {
   
 }
-
-
-
-
