--- a/webapp/css/public.css
+++ b/webapp/css/public.css
@@ -15,7 +15,8 @@
   font-family:'proximaNova';
   src: url(../dist/font/ProximaNova-Bold.otf);
 }
-body {font-family: gotham;overflow:auto;-webkit-overflow-scrolling:touch;}
+html,body {font-family: gotham!important;}
+body {overflow:auto;-webkit-overflow-scrolling:touch;}
 
 .ov-h {overflow: hidden!important;}
 
@@ -25,6 +26,9 @@ body.modal-open {
 }
 a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .errorBorder {border: .1rem solid rgba(251,99,99,1)!important;box-sizing: border-box;}
+.error-txt {color:#FF3643!important;font-size: .7rem!important;padding: .4rem 0 0!important;display: none;}
+
+.nav-bg {background:rgba(40,38,53,1);}
 
 /* 浏览器缩放提示 */
 .zoom-message {position: fixed;right: 0;top: 4.4rem;width: 16.5rem;padding: .8rem 2rem .8rem .8rem;
@@ -42,7 +46,8 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .public-head ul li:hover,.content-head .head-down img:hover,.suggest-from span:hover,.foot-members-cont .members-tab:hover,
 .public-title figure:hover,.mask-close:hover,.down-client:hover,.close-mask img:hover,.foot-news .foot-news-more:hover,
 .upload-button:hover,.upload-button input[type='file']:hover,.public-blur:hover,.public-cnt:hover,
-.public-cnt ul li:hover {cursor: pointer;}
+.public-cnt ul li:hover,.time-list li:hover,.news-mask .left-container img:hover,.left-list2 li:hover,
+.news-mask .right-container img:hover {cursor: pointer;}
 
 /* 首页公共子导航 */
 .public-title {display: flex;align-items: center;justify-content: space-between;box-sizing: border-box;
@@ -58,9 +63,12 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .public-head ul {display: flex;align-items: center;}
 .public-head ul li {margin-left: 2.5rem;font-size: .8rem;color:rgba(255,255,255,.2);}
 .public-head ul .login a {border: .1rem solid rgba(255,255,255,1);border-radius: .75rem;color: #fff;
-  padding: .45rem 1.1rem;}
+  height: 1.65rem;display: flex;align-items: center;width: 3.8rem;justify-content: center;
+  box-sizing: border-box;}
 .public-head ul .check-img {display: flex;align-items: center;}
+.public-head ul .headerImg {display: none;}
 .public-head ul li img {width: .55rem;height: .55rem;margin-right: .9rem;vertical-align: middle;}
+.public-head ul li .header-img {width: 1.7rem;height: 1.7rem;margin: 0;}
 .public-head ul li a {color:rgba(255,255,255,.2);}
 .public-head ul li a:hover {color:rgba(255,255,255,.8);text-decoration: none;}
 .public-head ul li:first-child {margin-left: 0;}
@@ -152,7 +160,7 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 /* 头像 + 昵称 */
 .mask-head {display: flex;align-items: center;}
 .mask-head img {margin-right: 1.5rem;}
-.mask-head figcaption span:first-child {color:rgba(255,255,255,.5);margin-right: .8rem;letter-spacing: .6rem;}
+.mask-head figcaption span:first-child {color:rgba(255,255,255,.5);margin-right: .8rem;}
 
 .public-btn {height: 2rem;border-radius: .5rem;font-size: .8rem;color: #fff;
   box-shadow:0 .15rem .45rem 0 rgba(69,72,90,0.3), 0 .8rem 1.45rem 0 rgba(69,72,90,0.04);
@@ -161,17 +169,19 @@ a:link,a:visited,a:hover,a:active {text-decoration: none;}
 .public-white {color: #fff!important;}
 .public-blur {color: #4EBBF7!important;font-size: .7rem;}
 .public-f {font-size: .6rem;}
-.l-s {letter-spacing: .6rem;}
+/* .l-s {letter-spacing: .6rem;} */
 
 /* 登陆、注册、重置密码 */
-.public-container {padding: 19.3rem 0 18.4rem;background: #666495;display: flex;align-items: center;
-  justify-content: center;}
+.public-container {padding: 19.3rem 0 18.4rem;display: flex;align-items: center;justify-content: center;
+  background: url('../images/login/publicLoginBg.png') center no-repeat;background-size: cover;position: relative;}
 
 .public-cnt {background:rgba(0,0,0,.5);border-radius: .25rem;display: flex;flex-direction: column;
   color: #fff;width: 25.4rem;}
 
 .public-flex-list {display: flex;align-items: center;justify-content: space-between;height: 2.5rem;
   background:rgba(18,17,22,.3);border-radius: .5rem;}
+.login-foot {position: absolute;bottom: 0;right: 0;left: 0;background:rgba(0,0,0,.1);height: 3rem;
+  display: flex;align-items: center;justify-content: flex-end;color:rgba(255,255,255,.5);font-size: .6rem;}
 
 /* 电话输入选择 */
 .phone-list {padding: 0 .8rem 0 1rem;position: relative;}
