--- a/webapp/css/register.css
+++ b/webapp/css/register.css
@@ -1,6 +1,14 @@
 .register-content {padding: 5rem 2.7rem 4.5rem;}
+h2 {font-size: 1.2rem;}
 
-.reg-btn {color: #434561;margin: 2.4rem 0 1.4rem;}
-h2 {font-size: 1.2rem;padding-bottom: 1.7rem;}
+.reg-btn {color: #434561;margin: 2.4rem 0 1.4rem;width: 100%;}
+.register-content h2 {padding-bottom: 1.7rem;}
 a {display: block;text-align: center;color: #fff;}
 a:hover {color: #fff;}
+
+.register-success {padding: 2.8rem 2.7rem 3rem;display: none;}
+.register-success  h2 {padding-right: .5rem;}
+.register-success section {display: flex;align-items: center;}
+.register-success p {font-size: .7rem;color: #868599;text-align: center;padding-top: 1.6rem;}
+.register-success .register-login {padding: 0;padding: .5rem 0 2.4rem;}
+.register-success button {width: 100%;}
